add blue-jms-spring module